updates to the tools stection, including alignment issues

--- a/css/main.css
+++ b/css/main.css
@@ -259,26 +259,80 @@ footer {
     width: 49%;
     border-radius: 3.5px;
 }
-
-
 /* /end Data Migration */
 
-
-
-
-.button-settings {
+/* Begin Downloads */
+.button-next {
     background-color: white;
-    border: solid 1px #59c9a5;
-    color: #59c9a5;
+    border: 1px solid rgba(0,0,0,.1);
+    color: black;
     padding: 15px 32px;
     text-align: center;
-    text-decoration: none;
+    text-decoration-color: #4ea2be;
     display: inline-block;
-    font-size: 1.25rem;
-    margin: 4px 2px;
+    font-size: 16px;
+    margin: 4px 0px 10px 0px;
     cursor: pointer;
-    width: 250px;
     border-radius: 3.5px;
+    width: 45%;
+}
+
+#chrome-arrow{
+	color: #4ea2be;
+	margin-left: 5px;
+}
+/* /end Downloads */
+
+#v-pills-tab {
+	border-right: 1px solid rgba(0,0,0,.1)
 }
 
 
+
+
+
+
+
+
+
+/* Begin Import Form */
+.import-btn {
+    background-color: white;
+    border: 1px solid rgba(0,0,0,.1);
+    color: black;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration-color: #4ea2be;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 0px 10px 0px;
+    cursor: pointer;
+    border-radius: 3.5px;
+    width: 45%;
+}
+
+.import-btn-submit {
+    background-color: #4ea2be;
+    border: 1px solid #4ea2be;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    width: 45%;
+}
+
+.import-btn-info {
+    background-color: lightgrey;
+    color: white;
+    padding: 2px 10px;
+    text-align: center;
+    display: inline-block;
+    font-size: 14px;
+    margin: 4px 2px;
+    cursor: pointer;
+    width: 150px;
+}
+/* End Import Form */
